<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by the Djowda Project Team
  ~ Copyright (c) 2017-2025 Djowda. All rights reserved.
  ~
  ~ This file is part of the Djowda Project.
  ~
  ~ Licensed under the Djowda Non-Commercial, Non-Profit License v1.0
  ~
  ~ Permissions:
  ~ - You may use, modify, and share this file for non-commercial and non-profit purposes only.
  ~ - Commercial use of this file, in any form, requires prior written permission
  ~   from the Djowda Project maintainers.
  ~
  ~ Notes:
  ~ - This project is community-driven and continuously evolving.
  ~ - The Djowda Project reserves the right to relicense future versions.
  ~
  ~ Last Modified: 2025-09-09 00:01
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">



   <!-- Home -->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <!-- Cart -->
    <item
        android:id="@+id/navigation_carts"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />

    <!-- Network -->
    <item
        android:id="@+id/navigation_network"
        android:icon="@drawable/baseline_handshake_24"
        android:title="@string/network" />

    <!-- Activities -->
    <item
    android:id="@+id/navigation_Activities"
    android:icon="@drawable/baseline_assignment_24"
    android:title="@string/activities" />


    <!-- Settings -->
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />

</menu>
