<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by the Djowda Project Team
  ~ Copyright (c) 2017-2025 Djowda. All rights reserved.
  ~
  ~ This file is part of the Djowda Project.
  ~
  ~ Licensed under the Djowda Non-Commercial, Non-Profit License v1.0
  ~
  ~ Permissions:
  ~ - You may use, modify, and share this file for non-commercial and non-profit purposes only.
  ~ - Commercial use of this file, in any form, requires prior written permission
  ~   from the Djowda Project maintainers.
  ~
  ~ Notes:
  ~ - This project is community-driven and continuously evolving.
  ~ - The Djowda Project reserves the right to relicense future versions.
  ~
  ~ Last Modified: 2025-09-08 23:54
  -->

<androidx.constraintlayout.widget.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LRUI.LRFlowDialogFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:scaleType="center"
        android:src="@drawable/tile_background_04"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:alpha="0.85"
        android:background="@android:color/white"
        android:visibility="visible"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@drawable/bottom_navv_back"
        android:backgroundTint="@android:color/holo_orange_light"

        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"


        app:layout_constraintBottom_toBottomOf="@+id/login_host_fragment"
        app:layout_constraintEnd_toEndOf="@+id/login_host_fragment"
        app:layout_constraintStart_toStartOf="@+id/login_host_fragment"
        app:layout_constraintTop_toTopOf="@+id/login_host_fragment" />

    <FrameLayout
        android:id="@+id/login_host_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/frame_waiting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/andika"
                android:text="@string/welcome_message"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/andika"
                android:text="@string/phone_input_message"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country_code_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/country_code"
                android:textColorHint="@android:color/black">

                <AutoCompleteTextView
                    android:id="@+id/country_code_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/phone_number"
                android:textColorHint="@android:color/black"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/location_hint"
                android:textColorHint="@android:color/black"
                app:endIconMode="custom"

                app:endIconContentDescription="@string/get_current_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_zone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/andika"
                    android:inputType="none"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Continue_to_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/andika"
                android:text="@string/continue_button"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:elevation="10dp"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="10dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/outline_info_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/andika"
                android:text="@string/alpha_version_notice"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>